crates/mega-evm/tests/satin/snapshots/satin__stops__an_inspector_cannot_turn_a_stop_into_a_halt.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&summaries(&views)"
---
{
  "Compute at depth 0, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 100000000, plain": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 0, gas limit 300000000, plain": "revert MegaLimitExceeded(ComputeGas, 20044593); stop ComputeGas limit 20044593 used 20043493; regular 20058493 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20085773; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 100000000, plain": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "Compute at depth 3, gas limit 300000000, plain": "revert MegaLimitExceeded(ComputeGas, 20053575); stop ComputeGas limit 20053575 used 20052475; regular 20067475 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 20094755; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 100000000, plain": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 0, gas limit 300000000, plain": "revert MegaLimitExceeded(DataSize, 461); stop DataSize limit 461 used 462; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 100000000, plain": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "DataSize at depth 3, gas limit 300000000, plain": "revert MegaLimitExceeded(DataSize, 557); stop DataSize limit 557 used 558; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 100000000, plain": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 0, gas limit 300000000, plain": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 100000000, plain": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "KvUpdates at depth 3, gas limit 300000000, plain": "revert MegaLimitExceeded(KVUpdate, 2); stop KVUpdate limit 2 used 3; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 100000000, plain": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 0, gas limit 300000000, plain": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 81697 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 108977; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 100000000, InvalidFEOpcode": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 100000000, OutOfGas": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 100000000, PrecompileOOG": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 100000000, plain": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 300000000, InvalidFEOpcode": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 300000000, OutOfGas": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 300000000, PrecompileOOG": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5",
  "StateGas at depth 3, gas limit 300000000, plain": "revert MegaLimitExceeded(StateGrowth, 293759); stop StateGrowth limit 293759 used 293760; regular 90679 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 117959; data_size 310 write_records 0; logs 0 accounts 5"
}
