crates/mega-evm/tests/satin/snapshots/satin__stops__data_limit_exceed_in_nested_call.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "revert",
    "reason": "MegaLimitExceeded(DataSize, 311)",
    "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000137",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 39720,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 67000
  },
  "result_gas": {
    "total_gas_spent": 67000,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": {
    "kind": "DataSize",
    "limit": 311,
    "used": 350
  },
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000500000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000bef000": "unchanged",
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
